# Simple-Pendulum-Simulation-Using-OpenGL

./: CMakeLists.txt  README.md
include/: globals.hpp  simple_pendulum.hpp
lib/: CMakeLists.txt
scripts/: get_dimensions.bat  get_dimensions.sh
src/: main.cpp  simple_pendulum.cpp
